# admichat

./: .gitignore  Cargo.toml  README.md  config.toml
mod-msg/: Cargo.toml  README.md
mod-msg/src/: main.rs
src/: main.rs
www/: chat-admin.html  chat-guest.html
